Day-05-Kubernetes/05-Ingress-Based-Routing/k8s/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo '<html><body><h1>Application 2</h1><p>Served through Kubernetes Ingress</p></body></html>' > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ingress-demo
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
